== Groups changelog.txt ==

= 2.0.1 =
* Fixed an issue with conflicting cache entries with legacy mode enabled.

= 2.0.0 =
* Changed the access restriction model to group-based access restrictions.
* Provides an optional legacy mode that supports the previous capability-based access restrictions.
* Optimized the approach to restrict read access on posts using groups rather than access restriction capabilities.
* Added the `groups_restrict_access` capability which grants users to impose access restrictions.
* Fixed the order_by and order parameters in Groups_Group::get_groups()
* Added the $create parameter in Groups_UIE::render_select()
* Removed the "Chosen" library.
* Improved and reduced the footprint on the Users admin screen, now allowing to filter by one or multiple groups.
* Added a welcome screen.
* Added the option to assign groups to new users directly when creating them from the Dashboard.
* Changed the language domain to string literal instead of constant.
* Improvements on internal coding standards (single/double quotes, EOF, formatting).

= 1.13.1 =
* Fixed an issue where the wrong post count would be produced for statuses that do not represent a valid WooCommerce order status.
* Added support for post counts with WooCommerce Subscriptions.

= 1.13.0 =
* Added a filter on wp_count_posts.

= 1.12.0 =
* Fixed an issue where resource paths were not correct with customized WP_CONTENT_DIR, WP_CONTENT_URL, WP_PLUGIN_DIR and WP_PLUGIN_URL.

= 1.11.3 =
* Updated the Spanish translation.

= 1.11.2 =
* Updated the translation template.
* Updated the German translation.
* Moved the complete changelog out to changelog.txt.

= 1.11.1 =
* Fixed the order_by and order parameters in Groups_Group::get_groups()

= 1.11.0 =
* Added the Brazilian Portuguese translation.

= 1.10.3 =
* Added the groups_access_restrictions_capability_selected filter.

= 1.10.2 =
* Tested for WordPress 4.5.

= 1.10.1 =